# gmail-inbox-zero

./: ARCHITECTURE.md  SKILL.md  pyproject.toml
data/: rules.json
inbox_zero/: __init__.py  actions.py  cli.py  config.py  engine.py  feedback.py  gmail_client.py  learner.py  models.py  rules.py  storage.py
scripts/: gmail_inbox_zero.py  gmail_inbox_zero_hybrid.py  inbox-zero
tests/: test_engine.py  test_gmail_client.py  test_learner.py  test_models.py  test_storage.py
