[project]
name = "gmail-inbox-zero"
version = "0.1.0"
description = "Gmail Inbox Zero with self-learning rule engine and ontology"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
inbox-zero = "inbox_zero.cli:cli"
